<resources>
    <string name="app_name">蔬果配送</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="type">分类</string>
    <string-array name="array_menu">
        <item>-固定套餐-</item>
        <item>种类</item>
        <item>规格</item>
        <item>-自定义套餐-</item>
        <item>自定义套餐</item>
        <item>-零售-</item>
        <item>品类</item>
        <item>产地</item>
    </string-array>
    <string name="xianshi">限时特价</string>
    <string name="home_lingshou">零售</string>
    <string name="home_pake">营养套餐</string>

    <string name="jifen">我的积分</string>
    <string name="shoucang">我的收藏</string>
    <string name="xiaoxi">我的消息</string>
    <string name="tuikuan">退款</string>
    <string name="evaluate">待评价</string>
    <string name="daichuli">待处理</string>
    <string name="yiwancheng">已完成</string>
    <string name="daishouhuo">待收货</string>
    <string name="dingdan">我的订单</string>
    <string name="login_register">登录/注册</string>
    <string name="editor">编辑</string>
    <string name="finish">完成</string>
    <string name="delete">删除</string>
    <string name="selectAll">全选</string>
    <string name="all">全部</string>
    <string name="amount">合计：</string>
    <string name="accounts">结算</string>
    <string name="money">￥0.0</string>
    <string name="apple">苹果</string>
    <string name="user">冬季穿短裤</string>
    <string name="shoppingCart">购物车(0)</string>
    <string name="accountSet">账户设置</string>
    <string name="personal_information">个人资料</string>
    <string name="shouhuo_address">收货地址</string>
    <string name="add_address">新建地址</string>
    <string name="account_safe">账户安全</string>

    <string name="head_img">头像</string>
    <string name="pet_name">昵称</string>
    <string name="change_nickname">修改昵称</string>
    <string name="sex">男</string>
    <string name="user_sex">性别</string>
    <string name="birthday">出生日期</string>
    <string name="birth">1997-02-21</string>
    <string name="phone_number">手机号</string>
    <string name="phone">15150570952</string>
    <string name="email_address">邮箱</string>
    <string name="change_email">修改邮箱</string>
    <string name="email">714081644@qq.com</string>

    <string name="save">保存</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="register_user">注册新用户</string>
    <string name="login_forget_pwd">忘记密码</string>

    <string name="xingming">姓名</string>
    <string name="sheng_shi_xian">省/市/县</string>
    <string name="xiangxi_dizhi">详细地址</string>
    <string name="moren">设为默认</string>
    <string name="delete_order">删除订单</string>
    <string name="pinjia">评价</string>
    <string name="payOrders">提交订单</string>

    <string name="about_us">蔬果配送，是一款致力于用户健康购物的app，集选购，配送于一体。我们不但为用户提供权威的水果营养搭配套餐，还为用户开辟了自定义搭配套餐的空间。在用户DIY的同时会伴随着所选商品的推荐搭配与禁忌搭配提示，用户可放心选购，“暖心购物，健康出行”是我们的项目理念，一切为用户的健康考虑。
  我们一方面为用户提供营养套餐的选购，另一方面为用户提供商品到期推送提醒，此时用户可根据所处环境选择是否收货，如若用户因繁忙而未取货，我们将对商品进行特价处理，从而避免浪费。立志为用户营造健康舒适的购物生活。</string>
</resources>
