<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context="com.example.xu.myapplication.moduleShopping.fragment.ShoppingFragment">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:fitsSystemWindows="true"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_shopingCart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/shoppingCart"
                android:textColor="@color/color_White"
                android:textSize="20sp"/>

            <CheckBox
                android:id="@+id/cb_editor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="30dp"
                android:button="@null"
                android:text="@string/editor"
                android:textColor="@color/color_White"/>
        </RelativeLayout>

    </android.support.v7.widget.Toolbar>

    <ListView
        android:id="@+id/lv_shopping"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

    </ListView>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@drawable/actionbar_shadow_up"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cb_selectAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:button="@drawable/checkbox_style"
            android:checked="false"
            android:text="@string/selectAll"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linear_shopping1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="end"
                android:orientation="horizontal"
                android:visibility="visible">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_weight="1">
                    <TextView
                        android:id="@+id/tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/amount"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:textColor="@color/color_Black"/>

                    <TextView
                        android:layout_toRightOf="@+id/tv"
                        android:id="@+id/tv_shopingMoney"
                        android:layout_centerVertical="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/money"
                        android:textColor="@color/colorAccent"/>
                </RelativeLayout>

                <Button
                    android:id="@+id/btn_shopingAccounts"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:background="@color/colorAccent"
                    android:text="@string/accounts"
                    android:textColor="@color/color_White"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_shopping2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="end"
                android:orientation="horizontal"
                android:visibility="gone">

                <Button
                    android:id="@+id/btn_shoppingDelete"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:background="@color/colorAccent"
                    android:text="@string/delete"
                    android:textColor="@color/color_White"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/tab_unSelect"/>

</LinearLayout>
