<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_address_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textColor="@color/color_Black"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/tv_address_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:textColor="@color/color_Black"
            android:textSize="18sp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_address_shouhuo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="5dp"
        android:background="@color/_9"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp">

        <CheckBox
            android:id="@+id/cb_address_moren"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:button="@drawable/checkbox_style"
            android:checked="false"
            android:text="@string/moren"
            android:textColor="@color/_6"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/tv_address_editor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_toLeftOf="@+id/tv_address_delete"
            android:drawableLeft="@mipmap/editor"
            android:gravity="center"
            android:text="@string/editor"/>

        <TextView
            android:id="@+id/tv_address_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:drawableLeft="@mipmap/delete"
            android:gravity="center"
            android:text="@string/delete"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="5px"
        android:layout_marginTop="5dp"
        android:background="@color/_9"/>

</LinearLayout>