<android.support.v4.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/refresh_my"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.xu.myapplication.moduleMy.MyFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="@color/colorPrimary">

            <com.example.xu.myapplication.moduleMy.view.CircleImageView
                android:id="@+id/iv_MyHead"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="30dp"/>

            <TextView
                android:id="@+id/tv_MyUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/iv_MyHead"
                android:textColor="@color/color_White"/>

            <ImageView
                android:id="@+id/iv_MySetting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="30dp"
                android:layout_marginTop="15dp"
                android:background="@mipmap/setting"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:weightSum="6">

            <TextView
                android:id="@+id/tv_dingdan"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@mipmap/dingdan"
                android:gravity="center"
                android:text="@string/dingdan"/>

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="@color/tab_unSelect"/>

            <LinearLayout
                android:id="@+id/linear_daishou"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableTop="@mipmap/daishouhuo"
                        android:gravity="center"
                        android:text="@string/daishouhuo"/>

                    <TextView
                        android:id="@+id/tv_daishou_hint"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top|right"
                        android:background="@drawable/type_zero"
                        android:gravity="center"
                        android:textColor="@android:color/white"
                        android:visibility="gone"/>
                </FrameLayout>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/linear_daichuli"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableTop="@mipmap/daichuli"
                        android:gravity="center"
                        android:text="@string/daichuli"/>

                    <TextView
                        android:id="@+id/tv_daichuli_hint"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top|right"
                        android:background="@drawable/type_zero"
                        android:gravity="center"
                        android:textColor="@android:color/white"
                        android:visibility="gone"/>
                </FrameLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/tv_wancheng"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@mipmap/yiwancheng"
                android:gravity="center"
                android:text="@string/yiwancheng"/>

            <LinearLayout
                android:id="@+id/linear_evaluate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableTop="@mipmap/evaluate"
                        android:gravity="center"
                        android:text="@string/evaluate"/>

                    <TextView
                        android:id="@+id/tv_evaluate_hint"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top|right"
                        android:background="@drawable/type_zero"
                        android:gravity="center"
                        android:textColor="@android:color/white"
                        android:visibility="gone"/>
                </FrameLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_tuikuan"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableTop="@mipmap/tuikuan"
                        android:gravity="center"
                        android:text="@string/tuikuan"/>

                    <TextView
                        android:id="@+id/tv_tuikuan_hint"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top|right"
                        android:background="@drawable/type_zero"
                        android:gravity="center"
                        android:textColor="@android:color/white"
                        android:visibility="gone"/>
                </FrameLayout>


            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="15dp"
            android:background="@color/tab_unSelect"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <LinearLayout
                android:id="@+id/linear_xiaoxi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:drawableLeft="@mipmap/xiaoxi"
                    android:gravity="center"
                    android:text="@string/xiaoxi"/>
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/tab_unSelect"/>

        <LinearLayout
            android:id="@+id/linear_shoucang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:drawableLeft="@mipmap/shoucang"
                android:gravity="center"
                android:text="@string/shoucang"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/tab_unSelect"/>

        <LinearLayout
            android:id="@+id/linear_jifen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:drawableLeft="@mipmap/jifen"
                android:gravity="center"
                android:text="@string/jifen"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/tab_unSelect"/>

    </LinearLayout>
</android.support.v4.widget.SwipeRefreshLayout>
